--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,6 @@ img {
 .search-form-field {
 	position: relative;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
 		
 	width: 100%;
@@ -334,6 +333,10 @@ img {
 .search-form-field:nth-last-of-type(1),
 .search-form-field:nth-last-of-type(2) {
 	width: 225px;
+}
+
+.search-form label {
+	margin-right: auto;
 }
 
 .search-form label[for="child"] {
