--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
 	margin: 0;
 	padding: 0;
@@ -41,14 +42,17 @@ img {
 	margin-left: auto;
 
 	background-color: #ffffff;
-	box-shadow: 0 -5px 15px 0 rgba(0, 1, 1, 0.2);
+	-webkit-box-shadow: 0 -5px 15px 0 rgba(0, 1, 1, 0.2);
+	        box-shadow: 0 -5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 .logo {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
 }
 
 .main-header {
@@ -56,21 +60,29 @@ img {
 }
 
 .main-navigation {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+
 	margin: 0;
-	padding: 0;
+	padding: 0 72px;
 
 	list-style: none;
 }
 
 .main-navigation li {
-	box-sizing: border-box;
-	width: 25%;
-	padding: 15px 70px;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+	width: 240px;
+	padding: 15px 0;
 
 	text-align: left
+}
+
+.main-navigation li:nth-child(2) {
+	margin-right: auto;
 }
 
 .main-navigation li:nth-child(3),
@@ -95,14 +107,15 @@ img {
 }
 
 .main-navigation-current a,
-.main-navigation a:hover,
-.main-navigation a:active {
+.main-navigation-current a:hover,
+.main-navigation-current a:active {
 	color: #766357;
 }
 
 /* Главная  */
 
 .welcome {
+	margin-bottom: 59px;
 	text-align: center;
 	background-color: #6f7278;
 	background-image: 
@@ -120,14 +133,13 @@ img {
 }
 
 .advantages {
-	padding-top: 50px;
 	text-align: center;
 
 }
 
 .advantages h2 {
 	width: 500px;
-	margin: 0 auto 10px;
+	margin: 0 auto 27px;
 	padding: 0;
 
 	font-weight: 700;
@@ -142,8 +154,11 @@ img {
 }
 
 .advantages-list {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 
@@ -152,15 +167,27 @@ img {
 }
 
 .advantage-item {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;           
 	width: 400px;
 }
 
 .advantage-item:first-child,
 .advantage-item:nth-child(2) {
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	width: 1200px;
 	color: #ffffff;
 
@@ -168,20 +195,54 @@ img {
 }
 
 .advantage-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;        
 	width: 400px;
 }
 
 .advantage-item span {
-	padding-bottom: 20px;
+	position: relative;
+	padding: 0 14px 20px;
+}
+
+.advantage-item span::before,
+.advantage-item span::after {
+	content: "";
+
+	position: absolute;
+	top: 10px;
+	right: 0;
+	width: 9px;
+	height: 2px;
+	background-color: #333333;
+
+}
+
+.advantage-item span::before {
+	top: 10px;
+	left: 0;
+}
+
+.advantage-container span::before,
+.advantage-container span::after {
+	background-color: #ffffff;
 }
 
 .advantage-item-title {
-	order: -1;
+	-webkit-box-ordinal-group: 0;
+	    -ms-flex-order: -1;
+	        order: -1;
 
 	margin: 0;
-	padding: 45px 120px 20px; 
+	padding: 48px 120px 20px; 
 
 	font-weight: 700;
 	font-size: 21px;
@@ -203,10 +264,14 @@ img {
 }
 
 .advantage-item:nth-child(2) .advantage-container {
-	order: 1;
+	-webkit-box-ordinal-group: 2;
+	    -ms-flex-order: 1;
+	        order: 1;
 }
 
 .advantages-sublist {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	margin: 0;
 	padding: 0;
@@ -314,12 +379,24 @@ img {
 
 }
  */
-@keyframes input-error {
+@-webkit-keyframes input-error {
 	25% {
-		transform: translateX(50px);
+		-webkit-transform: translateX(50px);
+		        transform: translateX(50px);
 	}
 	75% {
-		transform: translateX(-50px);
+		-webkit-transform: translateX(-50px);
+		        transform: translateX(-50px);
+	}
+}
+@keyframes input-error {
+	25% {
+		-webkit-transform: translateX(50px);
+		        transform: translateX(50px);
+	}
+	75% {
+		-webkit-transform: translateX(-50px);
+		        transform: translateX(-50px);
 	}
 } 
 
@@ -327,11 +404,19 @@ img {
 	position: absolute;
 	top: 76px;
 	left: 0;
+	z-index: 2;
+
+	display: -webkit-box;
+
+	display: -ms-flexbox;
 
 	display: flex;
 	visibility: visible;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: 458px;
 	padding: 55px;
 
@@ -342,11 +427,22 @@ img {
 	color: #000000;
 	
 	background-color: #ffffff;
-	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
+	        box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
 
-	transform: scale(1, 0);
-	transform-origin: top left;
+	-webkit-transform: scale(1, 0);
+
+	    -ms-transform: scale(1, 0);
+
+	        transform: scale(1, 0);
+	-webkit-transform-origin: top left;
+	    -ms-transform-origin: top left;
+	        transform-origin: top left;
+	-webkit-transition: -webkit-transform 0.6s;
+	transition: -webkit-transform 0.6s;
+	-o-transition: transform 0.6s;
 	transition: transform 0.6s;
+	transition: transform 0.6s, -webkit-transform 0.6s;
 }
 
 /* Отдельный класс с visibility:hidden; добавлен для того, чтобы при открытии формы 
@@ -355,24 +451,35 @@ img {
 
 .search-form-hidden {
 	visibility: hidden;
+	-webkit-transition: 0.6s;
+	-o-transition: 0.6s;
 	transition: 0.6s;
 }
 
 .search-form-show {
 	visibility: visible;
-	transform: scale(1);
+	-webkit-transform: scale(1);
+	    -ms-transform: scale(1);
+	        transform: scale(1);
 }
 
 .search-form-error {
-	animation-name: input-error;
-	animation-duration: 0.8s;
-	animation-timing-function: ease-in-out;
+	-webkit-animation-name: input-error;
+	        animation-name: input-error;
+	-webkit-animation-duration: 0.8s;
+	        animation-duration: 0.8s;
+	-webkit-animation-timing-function: ease-in-out;
+	        animation-timing-function: ease-in-out;
 }
 
 .search-form-field {
 	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 		
 	width: 100%;
 	margin: 0;
@@ -393,7 +500,8 @@ img {
 }
 
 .search-form input {
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	width: 346px;
 	height: 38px;
 	padding: 6px 38px 6px 12px;
@@ -478,7 +586,8 @@ img {
 }
 
 .search-form-button {
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	width: 100%;
 	margin-top: 24px;
 	padding: 16px;
@@ -522,8 +631,11 @@ img {
 /*Гостиницы*/
 
 .filters-form {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	padding: 30px 73px;
 	color: #ffffff;
 
@@ -570,6 +682,7 @@ img {
 .filter-option label {
 	position: relative;
 	padding-left: 40px;
+	cursor: pointer;
 }
 
 .filter-input-checkbox:not(:checked) ~ label::after {
@@ -628,6 +741,8 @@ img {
 
 .price-controls {
 	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 
 	width: 314px;
@@ -646,10 +761,13 @@ img {
 	width: 2px;
 	height: 22px;
 	background-color: #ffffff;
-	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	    -ms-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 }
 .price-controls label {
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	width: 50%;
 	padding: 6px 15px 6px 60px;
 
@@ -696,7 +814,8 @@ img {
 	position: absolute;
 	top: 11px;
 	left: 0;
-	box-sizing: content-box;
+	-webkit-box-sizing: content-box;
+	        box-sizing: content-box;
 	width: 4px;
 	height: 4px;
 	padding: 0;
@@ -704,7 +823,8 @@ img {
 	background-color: #ababab;
 	border: 8px solid #ffffff;
 	border-radius: 50%;
-	box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2);
+	-webkit-box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2);
+	        box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2);
 	cursor: pointer;
 }
 
@@ -746,9 +866,14 @@ img {
 }
 
 .hotels-sorting-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	align-items: baseline;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: baseline;
+	    -ms-flex-align: baseline;
+	        align-items: baseline;
 	padding: 25px 73px;
 
 }
@@ -765,9 +890,14 @@ img {
 }
 
 .hotels-sorting {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	flex-grow: 1;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-flex: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 	font-size: 12px;
 	line-height: 18px;
 }
@@ -777,8 +907,11 @@ img {
 }
 
 .sorting-type {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	margin: 0 auto 0 0;
 	padding: 0;
 
@@ -821,6 +954,8 @@ img {
 }
 
 .sorting-direction {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 
 	margin: 0;
@@ -846,13 +981,18 @@ img {
 }
 
 .sorting-direction-down::before {
-	transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	    -ms-transform: rotate(180deg);
+	        transform: rotate(180deg);
+}
+
+.sorting-direction a:focus {
+	outline: none;
 }
 
 .sorting-direction a:hover::before,
 .sorting-direction a:focus::before {
 	border-bottom-color: #231f20;
-	outline: none;
 }
 
 .sorting-direction a:active::before {
@@ -876,6 +1016,8 @@ img {
 }
 
 .hotel-item {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	padding: 30px 73px;
 
@@ -883,8 +1025,10 @@ img {
 }
 
 .hotel-item-image {
-	flex-shrink: 0;
-	align-self: flex-start;
+	-ms-flex-negative: 0;
+	    flex-shrink: 0;
+	-ms-flex-item-align: start;
+	    align-self: flex-start;
 	margin-right: 30px;
 }
 
@@ -962,10 +1106,19 @@ img {
 }
 
 .hotel-item-rating {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-end;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: end;
+	    -ms-flex-align: end;
+	        align-items: flex-end;
 	min-width: 130px;
 }
 
@@ -988,9 +1141,17 @@ img {
 	bottom: 0;
 	left: 0;
 
+	display: -webkit-box;
+
+	display: -ms-flexbox;
+
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	padding: 36px 73px;
 
 	color: #000000;
@@ -1011,6 +1172,8 @@ img {
 }
 
 .footer-social {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	margin: 0;
 	padding: 0;
@@ -1061,8 +1224,12 @@ img {
 }
 
 .footer-copyright {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	line-height: 26px;
 }
 
