--- a/css/style.css
+++ b/css/style.css
@@ -29,30 +29,36 @@ img {
 	width: 1px;
 	height: 1px;
 	margin: -1px;
-	border: 0;
 	padding: 0;
+
 	clip: rect(0 0 0 0);
 	overflow: hidden;
+	
+	border: 0;
 }
 
 .wrapper {
 	position: relative;
+
 	width: 1200px;
 	margin-right: auto;
 	margin-left: auto;
 
 	background-color: #ffffff;
 	-webkit-box-shadow: 0 -5px 15px 0 rgba(0, 1, 1, 0.2);
-	        box-shadow: 0 -5px 15px 0 rgba(0, 1, 1, 0.2);
+	box-shadow: 0 -5px 15px 0 rgba(0, 1, 1, 0.2);
 }
+
+/* Шапка сайта */
 
 .logo {
 	position: absolute;
 	top: 0;
 	left: 50%;
+
 	-webkit-transform: translateX(-50%);
-	    -ms-transform: translateX(-50%);
-	        transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
 }
 
 .main-header {
@@ -64,8 +70,7 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
-
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0 72px;
 
@@ -74,7 +79,7 @@ img {
 
 .main-navigation li {
 	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	width: 240px;
 	padding: 15px 0;
 
@@ -103,7 +108,6 @@ img {
 
 .main-navigation a:active {
 	color: rgba(0, 0, 0, 0.3);
-	
 }
 
 .main-navigation-current a,
@@ -116,15 +120,17 @@ img {
 
 .welcome {
 	margin-bottom: 59px;
+
 	text-align: center;
+
 	background-color: #6f7278;
 	background-image: 
-		url("../img/intro-mask.svg"),
-		url("../img/bg-full-index.jpg");
+	url("../img/intro-mask.svg"),
+	url("../img/bg-full-index.jpg");
 	background-repeat: no-repeat;
 	background-position: 
-		left 0 bottom -2px,
-		left 0 top 0;
+	left 0 bottom -2px,
+	left 0 top 0;
 }
 
 .welcome-slogan {
@@ -134,7 +140,6 @@ img {
 
 .advantages {
 	text-align: center;
-
 }
 
 .advantages h2 {
@@ -150,6 +155,7 @@ img {
 
 .advantages > p {
 	margin: 0 0 50px;
+
 	line-height: 26px;
 }
 
@@ -158,7 +164,7 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 
@@ -171,14 +177,14 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;           
+	-ms-flex-align: center;
+	align-items: center;           
 	width: 400px;
 }
 
@@ -186,9 +192,10 @@ img {
 .advantage-item:nth-child(2) {
 	-webkit-box-orient: horizontal;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
 	width: 1200px;
+
 	color: #ffffff;
 
 	background-color: #81b3d2;
@@ -200,16 +207,17 @@ img {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;        
+	-ms-flex-align: center;
+	align-items: center;        
 	width: 400px;
 }
 
 .advantage-item span {
 	position: relative;
+
 	padding: 0 14px 20px;
 }
 
@@ -220,10 +228,11 @@ img {
 	position: absolute;
 	top: 9px;
 	right: 0;
+
 	width: 9px;
 	height: 2px;
-	background-color: #333333;
 
+	background-color: #333333;
 }
 
 .advantage-item span::before {
@@ -238,8 +247,8 @@ img {
 
 .advantage-item-title {
 	-webkit-box-ordinal-group: 0;
-	    -ms-flex-order: -1;
-	        order: -1;
+	-ms-flex-order: -1;
+	order: -1;
 
 	margin: 0;
 	padding: 48px 120px 25px; 
@@ -267,8 +276,8 @@ img {
 
 .advantage-item:nth-child(2) .advantage-container {
 	-webkit-box-ordinal-group: 2;
-	    -ms-flex-order: 1;
-	        order: 1;
+	-ms-flex-order: 1;
+	order: 1;
 }
 
 .advantages-sublist {
@@ -277,9 +286,10 @@ img {
 	display: flex;
 	margin: 0;
 	padding: 0;
-	list-style: none;
-
+	
 	color: #333333;
+
+	list-style: none;
 	background-color: #ffffff;
 }
 
@@ -343,6 +353,7 @@ img {
 
 .hostel-search-container {
 	position: relative;
+
 	width: 568px;
 	margin: 0 auto;
 }
@@ -366,8 +377,8 @@ img {
 
 .search:active {
 	color: rgba(255, 255, 255, 0.3);
-	background-color: #503e33;
 
+	background-color: #503e33;
 }
 
 /* Форма поиска гостиницы */
@@ -375,21 +386,22 @@ img {
 @-webkit-keyframes input-error {
 	25% {
 		-webkit-transform: translateX(50px);
-		        transform: translateX(50px);
+		transform: translateX(50px);
 	}
 	75% {
 		-webkit-transform: translateX(-50px);
-		        transform: translateX(-50px);
+		transform: translateX(-50px);
 	}
 }
+
 @keyframes input-error {
 	25% {
 		-webkit-transform: translateX(50px);
-		        transform: translateX(50px);
+		transform: translateX(50px);
 	}
 	75% {
 		-webkit-transform: translateX(-50px);
-		        transform: translateX(-50px);
+		transform: translateX(-50px);
 	}
 } 
 
@@ -399,17 +411,15 @@ img {
 	left: 0;
 	z-index: 2;
 
-	display: -webkit-box;
-
-	display: -ms-flexbox;
-
-	display: flex;
 	visibility: visible;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	width: 458px;
 	padding: 55px;
 
@@ -421,16 +431,14 @@ img {
 	
 	background-color: #ffffff;
 	-webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
-	        box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
+	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
 
 	-webkit-transform: scale(1, 0);
-
-	    -ms-transform: scale(1, 0);
-
-	        transform: scale(1, 0);
+	-ms-transform: scale(1, 0);
+	transform: scale(1, 0);
 	-webkit-transform-origin: top left;
-	    -ms-transform-origin: top left;
-	        transform-origin: top left;
+	-ms-transform-origin: top left;
+	transform-origin: top left;
 	-webkit-transition: -webkit-transform 0.6s;
 	transition: -webkit-transform 0.6s;
 	-o-transition: transform 0.6s;
@@ -444,6 +452,7 @@ img {
 
 .search-form-hidden {
 	visibility: hidden;
+
 	-webkit-transition: 0.6s;
 	-o-transition: 0.6s;
 	transition: 0.6s;
@@ -452,17 +461,17 @@ img {
 .search-form-show {
 	visibility: visible;
 	-webkit-transform: scale(1);
-	    -ms-transform: scale(1);
-	        transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 }
 
 .search-form-error {
 	-webkit-animation-name: input-error;
-	        animation-name: input-error;
+	animation-name: input-error;
 	-webkit-animation-duration: 0.8s;
-	        animation-duration: 0.8s;
+	animation-duration: 0.8s;
 	-webkit-animation-timing-function: ease-in-out;
-	        animation-timing-function: ease-in-out;
+	animation-timing-function: ease-in-out;
 }
 
 .search-form-field {
@@ -471,9 +480,8 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-		
+	-ms-flex-align: center;
+	align-items: center;
 	width: 100%;
 	margin: 0;
 	margin-bottom: 30px;
@@ -494,7 +502,7 @@ img {
 
 .search-form input {
 	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	width: 346px;
 	height: 38px;
 	padding: 6px 38px 6px 12px;
@@ -510,6 +518,7 @@ img {
 .search-form input[name="child"] {
 	width: 115px;
 	padding: 6px 38px;
+
 	text-align: center;
 }
 
@@ -528,6 +537,7 @@ img {
 	position: absolute;
 	top: 0;
 	right: 0;
+
 	width: 38px;
 	height: 38px;
 	padding: 0;
@@ -580,7 +590,7 @@ img {
 
 .search-form-button {
 	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	width: 100%;
 	margin-top: 24px;
 	padding: 16px;
@@ -609,6 +619,7 @@ img {
 
 .map {
 	position: relative;
+
 	line-height: 0;
 }
 
@@ -620,8 +631,6 @@ img {
 	border: 0;
 }
 
-
-
 /*Гостиницы*/
 
 .filters-form {
@@ -629,8 +638,9 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	padding: 27px 72px 31px;
+
 	color: #ffffff;
 
 	background-color: #669ec0;
@@ -644,6 +654,7 @@ img {
 	width: 240px;
 	margin: 0 15px 0 0;
 	padding: 0;
+
 	border: none;
 }
 
@@ -653,6 +664,7 @@ img {
 
 .filters-form legend {
 	margin-bottom: 25px;
+
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 21px;
@@ -675,15 +687,19 @@ img {
 
 .filter-option label {
 	position: relative;
+
 	padding-left: 40px;
+
 	cursor: pointer;
 }
 
 .filter-input-checkbox:not(:checked) ~ label::after {
 	content: "";
+
 	position: absolute;
 	top: -2px;
 	left: 0;
+
 	width: 19px;
 	height: 19px;
 
@@ -693,9 +709,11 @@ img {
 
 .filter-input-checkbox:checked ~ label::after {
 	content: "";
+
 	position: absolute;
 	top: -2px;
 	left: 0;
+
 	width: 27px;
 	height: 23px;
 
@@ -712,9 +730,10 @@ img {
 	background-image: url("../img/checkbox-on-disabled.svg");
 }
 
- /* Для отображения фокуса с клавиатуры */
+/* Для отображения фокуса с клавиатуры */
 .filter-input-checkbox:focus ~ label::before {
 	content: "";
+
 	position: absolute;
 	top: 4px;
 	left: 4px;
@@ -748,20 +767,23 @@ img {
 
 .price-controls::before {
 	content: "";
+
 	position: absolute;
 	top: 50%;
 	left: 50%;
 
 	width: 2px;
 	height: 22px;
+
 	background-color: #ffffff;
+
 	-webkit-transform: translate(-50%, -50%);
-	    -ms-transform: translate(-50%, -50%);
-	        transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 }
 .price-controls label {
 	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	width: 50%;
 	padding: 7px 15px 5px 55px;
 
@@ -785,12 +807,14 @@ img {
 
 .range-controls {
 	position: relative;
+
 	margin-bottom: 12px;
 	padding: 20px 0;
 }
 
 .range-controls .scale {
 	position: relative;
+
 	width: 318px;
 	height: 2px;
 
@@ -804,16 +828,17 @@ img {
 
 	width: 265px;
 	height: 2px;
- 	
- 	background-color: #ffffff;
+	
+	background-color: #ffffff;
 }
 
 .range-toggle {
 	position: absolute;
 	top: 11px;
 	left: 0;
+
 	-webkit-box-sizing: content-box;
-	        box-sizing: content-box;
+	box-sizing: content-box;
 	width: 4px;
 	height: 4px;
 	padding: 0;
@@ -822,7 +847,8 @@ img {
 	border: 8px solid #ffffff;
 	border-radius: 50%;
 	-webkit-box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2);
-	        box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2);
+	box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2);
+
 	cursor: pointer;
 }
 
@@ -845,10 +871,11 @@ img {
 	text-transform: uppercase;
 	color: #ffffff;
 
- 	background-color: transparent;
- 	border: 2px solid white;
- 	border-radius: 3px;
- 	cursor: pointer;
+	background-color: transparent;
+	border: 2px solid white;
+	border-radius: 3px;
+
+	cursor: pointer;
 }
 
 .filters-form-button:hover,
@@ -868,10 +895,10 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	-webkit-box-align: baseline;
-	    -ms-flex-align: baseline;
-	        align-items: baseline;
+	-ms-flex-align: baseline;
+	align-items: baseline;
 	padding: 30px 72px;
 
 }
@@ -892,10 +919,11 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	-webkit-box-flex: 1;
-	    -ms-flex-positive: 1;
-	        flex-grow: 1;
+	-ms-flex-positive: 1;
+	flex-grow: 1;
+
 	font-size: 12px;
 	line-height: 18px;
 }
@@ -909,7 +937,7 @@ img {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	flex-wrap: wrap;
 	margin: 0 auto 0 0;
 	padding: 0;
 
@@ -948,6 +976,7 @@ img {
 .sorting-type .sorting-current:focus,
 .sorting-type .sorting-current:active {
 	color: #81b3d2;
+
 	border-color: transparent;
 }
 
@@ -958,6 +987,7 @@ img {
 
 	margin: 0;
 	padding: 0;
+
 	list-style: none;
 }
 
@@ -971,20 +1001,23 @@ img {
 
 .sorting-direction a {
 	position: relative;
+
 	display: block;
 	width: 20px;
 	height: 20px;
 }
 
 .sorting-direction a::before {
-
 	content: "";
+
 	position: absolute;
 	top: 3px;
 	left: 50%;
+
 	display: block;
 	width: 0;
 	height: 0;
+
 	border-top: none;
 	border-right: 5px solid transparent;
 	border-bottom: 10px solid #cacaca;
@@ -993,8 +1026,8 @@ img {
 
 .sorting-direction-down::before {
 	-webkit-transform: rotate(180deg);
-	    -ms-transform: rotate(180deg);
-	        transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	transform: rotate(180deg);
 }
 
 .sorting-direction a:focus {
@@ -1010,19 +1043,16 @@ img {
 	border-bottom-color: #81b3d2;
 }
 
-
 .sorting-direction .sorting-current::before,
 .sorting-direction .sorting-current:hover::before {
 	border-bottom-color: #81b3d2;
 }
 
-
-
 .hotels-list {
 	margin: 0;
 	padding: 0;
-	list-style: none;
 
+	list-style: none;
 	border-top: 1px solid #e5e5e5;
 }
 
@@ -1037,10 +1067,10 @@ img {
 
 .hotel-item-image {
 	-ms-flex-negative: 0;
-	    flex-shrink: 0;
+	flex-shrink: 0;
 	-ms-flex-item-align: start;
-	    align-self: flex-start;
-    margin-top: 6px;
+	align-self: flex-start;
+	margin-top: 6px;
 	margin-right: 30px;
 }
 
@@ -1062,6 +1092,7 @@ img {
 .hotel-title a:hover,
 .hotel-title a:focus {
 	color: #81b3d2;
+
 	outline: none;
 }
 
@@ -1081,6 +1112,7 @@ img {
 .hotel-link {
 	display: inline-block;
 	padding: 3px 17px;
+
 	font-weight: 700;
 	color: #ffffff;
 }
@@ -1123,21 +1155,20 @@ img {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	-webkit-box-align: end;
-	    -ms-flex-align: end;
-	        align-items: flex-end;
+	-ms-flex-align: end;
+	align-items: flex-end;
 	min-width: 130px;
 	padding-top: 3px;
 }
 
 .hotel-item-rating p {
 	margin: 0;
-	
 }
 
 .hotel-rating-star img {
@@ -1146,9 +1177,11 @@ img {
 }
 
 p.hotel-rating-number {
-	padding: 3px 13px 3px 14px;
 	margin-bottom: 7px;
+	padding: 3px 13px 3px 14px;
+
 	color: #666666;
+
 	background-color: #f2f2f2;
 }
 
@@ -1161,16 +1194,14 @@ p.hotel-rating-number {
 	left: 0;
 
 	display: -webkit-box;
-
 	display: -ms-flexbox;
-
 	display: flex;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 	padding: 26px 73px;
 
 	color: #000000;
@@ -1179,16 +1210,17 @@ p.hotel-rating-number {
 
 .main-footer-inner {
 	position: static;
+
 	background-color: #fefefe;
 }
 
 .footer-hashtag {
 	padding-left: 60px;
 	padding-right: 27px;
+
 	font-weight: 700;
 	font-size: 21px;
 	line-height: 26px;
-	
 }
 
 .footer-social {
@@ -1203,6 +1235,7 @@ p.hotel-rating-number {
 
 .footer-social li {
 	margin-right: 6px;
+
 	background-color: #5496bd;
 }
 
@@ -1248,11 +1281,12 @@ p.hotel-rating-number {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 	-ms-flex-item-align: end;
-	    align-self: flex-end;
+	align-self: flex-end;
 	margin: 0 27px 5px 0;
+	
 	line-height: 26px;
 }
 
