Минимизированы CSS- и JS-файлы

--- a/css/style.css
+++ b/css/style.css
@@ -828,7 +828,7 @@ img {
 
 	width: 265px;
 	height: 2px;
-	
+
 	background-color: #ffffff;
 }
 
@@ -1106,11 +1106,13 @@ img {
 
 .hotel-type {
 	display: inline-block;
+	vertical-align: bottom;
 	min-width: 112px;
 } 
 
 .hotel-link {
 	display: inline-block;
+	vertical-align: bottom;
 	padding: 3px 17px;
 
 	font-weight: 700;
@@ -1173,6 +1175,7 @@ img {
 
 .hotel-rating-star img {
 	display: inline-block;
+	vertical-align: top;
 	margin-left: 2px;
 }
 
@@ -1286,7 +1289,7 @@ p.hotel-rating-number {
 	-ms-flex-item-align: end;
 	align-self: flex-end;
 	margin: 0 27px 5px 0;
-	
+
 	line-height: 26px;
 }
 
